--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,22 @@
 *.la
 *.a
 *.lib
+build/*
 
 # Executables
 *.exe
 *.out
 *.app
+bin/*
+
+# CMake
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+CMakeFiles
+
+# CodeLite
+*.project
+*.workspace
+.codelite/*
+.ctagsd/*
